# Soundboard-toolbox

./: .gitignore  BUILD.md  CMakeLists.txt  INSTALL.md  README.md
Source/: GlobalHotkeys.cpp  GlobalHotkeys.h  Main.cpp  MainComponent.cpp  MainComponent.h  SoundboardComponent.cpp  SoundboardComponent.h  SoundboardEngine.cpp  SoundboardEngine.h  TTSComponent.cpp  TTSComponent.h  VoiceEngine.cpp  VoiceEngine.h
installer/: voicemod.iss
